--- a/TermProject.html
+++ b/TermProject.html
@@ -58,7 +58,6 @@ Canvas not supported on this browser.
 
 </div>
 
-</body>
 
 <script>
 
@@ -67,55 +66,67 @@ var ctx = canvas.getContext("2d");
 
 var imgH = 200, imgW = 150; //Player1 character properties.
 var x = 0, y = canvas.height/2-imgH/2; //Starting positions.
-var speed = 12; //Speed at which the paddles move.
+var x2 = canvas.width-imgW, y2 = canvas.height/2-imgH/2;
+var speed = 24; //Speed at which the paddles move.
 
-var playerImg = document.createElement("img");
-playerImg.src = "test1.jpg";
+var img = document.createElement("img");
+img.src = "test1.jpg";
 
+var img2 = document.createElement("img");
+img2.src = "emilia.jpg";
 
-ctx.drawImage(playerImg,x,y,imgW,imgH);
-/*
-ctx.beginPath();
-ctx.moveTo(500,0);
-ctx.lineTo(500,700);
-ctx.stroke();
-ctx.closePath();
-
-ctx.beginPath();
-ctx.moveTo(0,350);
-ctx.lineTo(1000,350);
-ctx.stroke();
-ctx.closePath();
-*/
+var keys = [];
 
 
+window.onload = function(){
+ctx.drawImage(img,x,y,imgW,imgH);
+ctx.drawImage(img2,x2,y,imgW,imgH);
+function moveSet(){
+	if (keys[87] && y >= 0) {//up
+		ctx.clearRect(x,y-speed,imgW,canvas.height);
+		y-=speed;
+		ctx.drawImage(img,x,y,imgW,imgH);
+
+	}
+	if (keys[83] && y <= canvas.height-imgH) {//down
+		ctx.clearRect(x,y-speed,imgW,canvas.height);
+		y+=speed;
+		ctx.drawImage(img,x,y,imgW,imgH);
+	}
+	if (keys[38] && y2 >= 0) {//up
+		ctx.clearRect(x2,y2-speed,imgW,canvas.height);
+		y2-=speed;
+		ctx.drawImage(img2,x2,y2,imgW,imgH);
+	}
+	if (keys[40] && y2 <= canvas.height-imgH) { //down
+		ctx.clearRect(x2,y2-speed,imgW,canvas.height);
+		y2+=speed;
+		ctx.drawImage(img2,x2,y2,imgW,imgH);
+	}
+}
+
+
+document.body.addEventListener("keydown", function(key){ //movement.
+	keys[key.keyCode] = true;
+	moveSet();
+});
+
+document.body.addEventListener("keyup", function(key){ //movement.
+	keys[key.keyCode] = false;	
+	moveSet();
+});
+
+}
 //tempBall
+/*
 ctx.moveTo(canvas.width/2, canvas.height/2);
 ctx.fillStyle = "purple";
 ctx.arc(canvas.width/2, canvas.height/2,10,0,Math.PI*2);
 ctx.fill();
-
-window.addEventListener("keydown", function(key){ //movement.
-	var code = key.keyCode;
-	if(code == 83 && y <= (canvas.height - imgH) ){ //Down
-		y+=speed;
-		ctx.clearRect(x,y,canvas.width,canvas.height);
-		ctx.drawImage(playerImg,x,y,imgW,imgH);;
-	}
-
-	else if (code == 87 && y >= 0){//Up
-		y-=speed;
-		ctx.clearRect(x,y,canvas.width,canvas.height);
-		ctx.drawImage(playerImg,x,y,imgW,imgH);;
-	}
-	
-	ctx.moveTo(canvas.width/2, canvas.height/2);
-	ctx.fillStyle = "purple";
-	ctx.arc(canvas.width/2, canvas.height/2,10,0,Math.PI*2);
-	ctx.fill();
+*/
 
 
-}); 
+
 </script>
 
 </body>
