--- a/TermProject.html
+++ b/TermProject.html
@@ -84,7 +84,7 @@ var img = document.createElement("img"), score1 = document.getElementById("playe
 img.src = "test1.jpg";
 
 var img2 = document.createElement("img"), score2 = document.getElementById("playerTwo");
-img2.src = "emilia.jpg";
+img2.src = "maki.jpeg";
 
 var keys = [];
 
